# deka-gst-image-processing-rs

./: Cargo.toml
src/: cpu_sobel.rs  glow_gst_inteop.rs  gst_wgpu.rs  lib.rs  ogl.rs  wgpu_copy.rs  wgpu_env.rs  wgpu_sobel_simple.rs  wgpu_texture_copy.rs
src/cpu_sobel/: imp.rs
src/glow_gst_inteop/: glow_context.rs  transition.rs
src/gst_wgpu/: gst_wgpu_context.rs  gst_wgpu_memory.rs
src/gst_wgpu/gst_wgpu_context/: imp.rs
src/gst_wgpu/gst_wgpu_memory/: imp.rs
src/ogl/: base.vert  glsobel.frag  glsobel.rs
src/wgpu_copy/: imp.rs
src/wgpu_sobel_mem/: imp.rs
src/wgpu_sobel_simple/: imp.rs
src/wgpu_texture_copy/: imp.rs
