[package]
name = "deka-gst-image-processing-rs"
description = "Deka's gstreamer plugins for image processing algos testing"
repository = "https://github.com/speedCrash100/deka-gst-image-processing-rs"
license = "MIT"
authors = ["Anton Kushakov <speedcrash100@ya.ru>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

[lib]
name = "gstdeka_image_processing_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
gstreamer = "0.24"
gstreamer-base = "0.24"
gstreamer-video = "0.24"
gstreamer-gl = "0.24"
ocl = "0.19.7"
parking_lot = "0.12.5"

[build-dependencies]
gst-plugin-version-helper = "0.8"

[dev-dependencies]
env_logger = "0.11"
log = "0.3"
